--- a/aura/templates/nginx/standard.proxy.in
+++ b/aura/templates/nginx/standard.proxy.in
@@ -6,7 +6,7 @@
 		listen [@AURA_IPV6@]:443 ssl;
 		listen @AURA_IPV4@:443 ssl;
 		ssl_certificate /aura/secure/certs/nginx/@NGX_SSL_CERT@.crt;
-		ssl_certificate_key /aura/secure/certs/nginx/@NGX_SSL_CERT@.dec.key;
+		ssl_certificate_key /aura/secure/certs/nginx/@NGX_SSL_CERT@.key;
 		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 		ssl_ciphers !aNULL:!LOW:!MD5:!EXP:CAMELLIA:AES256:HIGH:AES128:!RC4:!3DES:!SEED;
 		ssl_prefer_server_ciphers on;
@@ -25,7 +25,7 @@
 		listen [@AURA_IPV6@]:443 ssl;
 		listen @AURA_IPV4@:443 ssl;
 		ssl_certificate /aura/secure/certs/nginx/@NGX_SSL_CERT@.crt;
-		ssl_certificate_key /aura/secure/certs/nginx/@NGX_SSL_CERT@.dec.key;
+		ssl_certificate_key /aura/secure/certs/nginx/@NGX_SSL_CERT@.key;
 		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 		ssl_ciphers !aNULL:!LOW:!MD5:!EXP:CAMELLIA:AES256:HIGH:AES128:!RC4:!3DES:!SEED;
 		ssl_prefer_server_ciphers on;
