Deal with enano not being fully nginx compliant and allow PHP's handling of 404 errors to be a choice

--- a/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
+++ b/aura/configuration/binoc/binaryoutcast/nginx/www.binaryoutcast.com.vhost.in
@@ -12,6 +12,8 @@
 		}
 		location ~ \.php$ {
 			include /aura/configuration/system/nginx/standard-php.inc;
+            fastcgi_intercept_errors on;
+            error_page 404 = @404;
 			fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php56.socket;
 		}
 		location ~* /techcentral/(.*) {
