--- a/aura/templates/nginx/standard.vhost.in
+++ b/aura/templates/nginx/standard.vhost.in
@@ -18,11 +18,17 @@
 #ifdef NGX_ENABLE_CMSMS
             try_files $uri $uri/ /index.php?page=$request_uri;
 #elif NGX_ENABLE_ENANO
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ @enano-rewrite;
 #else
             try_files $uri/ $uri =404;
 #endif
         }
+
+#ifdef NGX_ENABLE_ENANO
+        location @enano-rewrite {
+            rewrite ^/(.*)$ /index.php?title=$1&$args;
+        }
+#endif
 
 #ifdef NGX_ENABLE_PHP
         location ~ \.php$ {
