Enable php and wordpress for unaffiliated site kokomosaferefuge

--- a/aura/configuration/unaffiliated/kokomosaferefuge/nginx/CMakeLists.txt
+++ b/aura/configuration/unaffiliated/kokomosaferefuge/nginx/CMakeLists.txt
@@ -53,4 +53,7 @@ pyPreprocess(
     -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubdomain}"
+    -DNGX_ENABLE_PHP=1
+    -DNGX_ENABLE_WORDPRESS=1
+    -DPHP_VERSION_56=1
 )
