Add a new cmake function to handle nginx preprocessing to reduce the amount duplicate "defines" in cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,6 @@ file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/dist/bin)
 set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/dist/bin")
 
 include(${CMAKE_SOURCE_DIR}/config/cmk_modules/pyPreprocess.cmake)
+include(${CMAKE_SOURCE_DIR}/config/cmk_modules/pyPP-nginx.cmake)
 
 add_subdirectory(aura)
